functionality added -> bookmark any recipe

--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -28,6 +28,18 @@
   color: #fff;
 }
 
+.blackBackground {
+  background-color: #000;
+}
+
 .pointer {
   cursor: pointer;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
 }
