add form funtionality only submission left

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
   }
 }
 
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   display: none;
 }
 
@@ -44,4 +44,16 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+/* For WebKit browsers (Chrome, Safari, Edge, Opera) */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* For Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
